<resources>
    <string name="app_name">CookIt!</string>

    <!-- Basic dialog answers -->
    <string name="dismiss">Отмена</string>
    <string name="continueString">Продолжить</string>

    <!-- Actions -->
    <string name="open_camera">Открыть камеру</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="go_to_recipes_button">К рецептам</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="ingredient_actions">Действия с ингредиентом</string>
    <string name="recipe_actions">Действия с рецептом</string>
    <string name="add_to_shopping_lists">Добавить в список покупок</string>
    <string name="add_to_favorites_suggestion">Добавить в избранное</string>
    <string name="delete_from_shopping_lists">Удалить из списка покупок</string>
    <string name="delete_from_favorites_suggestion">Удалить из избранного</string>
    <string name="actions_with_ingredients">Действия со списком ингредиентов</string>
    <string name="bill_select_prompt">Сделайте / выберите чёткую и контрастную фотографию Вашего чека</string>

    <!-- Results of actions -->
    <string name="you_will_need">Вам понадобятся:</string>
    <string name="parsed_successful">Найдены результаты</string>
    <string name="nothing_found">Ингредиенты не найдены</string>
    <string name="added_to_favorites">Добавлено в избранное</string>
    <string name="deleted_from_favorites">Удалено из избранного</string>
    <string name="photo_closed">Возможно, Вы отменили выбор фото</string>
    <string name="found_following_components">Найдены следующие ингредиенты:</string>
    <string name="added_to_shopping_list">Ингредиенты добавлены в список покупок</string>
    <string name="removed_from_shopping_list">Ингредиенты удалены из списка покупок</string>
    <string name="internet_required">Для работы этой функции требуется подключение к интернету!</string>
    <string name="nothing_in_fridge">Не найдено ингредиентов. Чтобы добавить ингредиент в холодильник, долго подержите его, затем нажмите «добавить в избранное»</string>
    <string name="nothing_in_shopping_lists">Не найдено списков покупок. Чтобы добавить список, перейдите на интересующее блюдо, нажмите на список ингредиентов (под главной картинкой)</string>

    <!-- Fragment tags -->
    <string name="backend_bill_scan_fragment_tag">bill_fragment</string>
    <string name="backend_database_fragment_tag">database_fragment</string>
    <string name="backend_settings_fragment_tag">settings_fragment</string>
    <string name="backend_shopping_list_fragment_tag">shopping_list</string>
    <string name="backend_favorite_dishes_fragment_tag">favorite_dishes</string>
    <string name="backend_recommended_dishes_fragment_tag">recommended</string>
    <string name="backend_favorite_ingredients_fragment_tag">favorite_ingredients</string>

    <!-- Side menu -->
    <string name="menu">Меню</string>
    <string name="dishes">Все рецепты</string>
    <string name="settings">Настройки</string>
    <string name="categories">Категории</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="refrigerator">Холодильник</string>
    <string name="bill_scan">Сканировать чек</string>
    <string name="shopping_lists">Списки покупок</string>
    <string name="favorites_dishes">Избранные блюда</string>
    <string name="recommendations">Вам могут понравиться</string>

    <!-- Content descriptions -->
    <string name="search_hint">Поиск</string>
    <string name="page_end">Конец страницы</string>
    <string name="dish_image_step_by_step">Изображение блюда</string>

    <!-- Settings -->
    <string name="download_pictures_settings">Скачивать изображения</string>
    <string name="help">Справка</string>

    <!-- Processing -->
    <string name="parsing">Распознавание изображения…</string>
    <string name="searching_ingredients">Ищем ингредиенты…</string>
    <string name="canceled">Отменено</string>
    <string name="scroll">scroll</string>
    <string name="something_wrong">Что-то пошло не так</string>

    <!-- Welcome help screen -->
    <string name="next">Далее</string>

    <string name="ingredients_help">Ингредиенты / компоненты</string>
    <string name="ingredients_content">Выберите несколько ингредиентов, нажмите кнопку «К рецептам»</string>

    <string name="dishes_help">Рецепты</string>
    <string name="dishes_content">Нажмите на интересующее Вас блюдо</string>

    <string name="step_by_step_help">Пошаговый рецепт</string>
    <string name="step_by_step_content">Если к шагу приложена картинка, то ее можно раскрыть, нажав на карточку</string>

    <string name="favorite_dishes_help">Избранные блюда</string>
    <string name="favorite_dishes_content">Нажмите на сердечко в пошаговом рецепте или подержите блюдо в меню</string>

    <string name="favorite_ingredients_help">Холодильник</string>
    <string name="favorite_ingredients_content">Подержите ингредиент в соответствующем меню для добавления в избранное</string>

    <string name="more_in_help">Справка</string>
    <string name="more_in_help_content">Детальнее о возможностях приложения — в справке в настройках</string>

    <string name="close_help">Закрыть</string>
</resources>