<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/toIngredients"
        android:icon="@drawable/color_ingredients"
        android:title="@string/ingredients" />

    <item
        android:id="@+id/toCategories"
        android:icon="@drawable/color_categories"
        android:title="@string/categories" />

    <item
        android:id="@+id/toDishes"
        android:icon="@drawable/color_dishes"
        android:title="@string/dishes" />

    <item
        android:id="@+id/toFavorites"
        android:icon="@drawable/favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/toRecommendations"
        android:icon="@drawable/recommendations"
        android:title="@string/recommendations" />

    <item
        android:id="@+id/toShoppingLists"
        android:icon="@drawable/shopping_list"
        android:title="@string/shopping_lists" />

    <item
        android:id="@+id/toReceiptScan"
        android:icon="@drawable/receipt_scan"
        android:title="@string/bill_scan" />

    <item
        android:id="@+id/clearSelected"
        android:icon="@drawable/clear_selected_ingredient"
        android:title="@string/clear_selected" />

</menu>
